2018-03-20         Manuel Collado        <m-collado@users.sourceforge.net>

	* General code clean-up.
	* configure.ac: Bump version to 1.0.0.
	* common.h, common_aux.h, csv.c, csv_split.c: Upgrade to API v2.
	* test/csvsplit.awk: Fix wrong code.

2018-03-19         Manuel Collado        <m-collado@users.sourceforge.net>

	* packaging/gawk-csv.spec.in: Attempt to comply with Fedora spec guidelines.

2017-12-18         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* po/LINGUAS: Remove "fr", since we don't actually have a French
	translation.
	* po/fr.po: Delete file, since it contains nothing useful.

2017-03-06         Manuel Collado        <m-collado@users.sourceforge.net>

	* doc/Makefile.am: Ensure a "weak dependency" on gawk-xml.

2017-02-25         Manuel Collado        <m-collado@users.sourceforge.net>

	* awklib/csv/csv.awk: Minor fix.
	* test/Makefile.am: Fix AWKPATH for tests.

2017-02-23         Manuel Collado        <m-collado@users.sourceforge.net>

	* First alpha version 0.1.0.
	* Implements the CSV input mode by means of an awk emulation layer,
	included in the csv.awk file.